--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
+    "mongoose": "^7.6.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
 }
