--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,6 @@
 PORT=4500
 NODE_ENV=development
 MONGO_URI=mongodb+srv://Syed:Syed123@cluster0.2hfdn7h.mongodb.net/devcamper?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_KEY=qtytd4w0FAp07nzrCBOnCmPF9eozFJ19
