--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-geocoder": "^4.2.0"
   },
   "devDependencies": {
     "colors": "^1.4.0",
     "mongoose": "^7.6.0",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "slugify": "^1.6.6"
   }
 }
