--- a/config/config.env
+++ b/config/config.env
@@ -4,3 +4,6 @@ MONGO_URI=mongodb+srv://Syed:Syed123@cluster0.2hfdn7h.mongodb.net/devcamper?retr
 
 GEOCODER_PROVIDER=mapquest
 GEOCODER_KEY=qtytd4w0FAp07nzrCBOnCmPF9eozFJ19
+
+MAX_FILE_UPLOAD_SIZE=1000000
+FILE_UPLOAD_PATH=./public/uploads
