--- a/config/config.env
+++ b/config/config.env
@@ -7,3 +7,6 @@ GEOCODER_KEY=qtytd4w0FAp07nzrCBOnCmPF9eozFJ19
 
 MAX_FILE_UPLOAD_SIZE=1000000
 FILE_UPLOAD_PATH=./public/uploads
+
+JWT_SECRET=6nTH86KeZS
+JWT_EXPIRE=7d
