--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-geocoder": "^4.2.0"
   },
   "devDependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
