--- a/config/config.env
+++ b/config/config.env
@@ -11,3 +11,10 @@ FILE_UPLOAD_PATH=./public/uploads
 JWT_SECRET=6nTH86KeZS
 JWT_EXPIRE=7d
 JWT_EXPIRE_COOKIE=7
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=a16165681b7c3f
+SMTP_PASSWORD=f2d2fbfab90b7a
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=DevCamper
