--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "Syed",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
-    "node-geocoder": "^4.2.0"
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "node-geocoder": "^4.2.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "bcryptjs": "^2.4.3",
